# opendetex

./: .ecrc  .editorconfig  .gitignore  .mega-linter.yml  .travis.yml  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.sample  README  README-development.md  configure.ac  detex.1  detex.h  detex.l  release.sh  test.pl  test.pl.in
.github/workflows/: manpage.yml  mega-linter.yml  test.yml
.travis/: install.sh
test/: comments-correct.txt  comments.tex  correct.txt  in.tex  noinclude-correct.txt  noinclude.tex  nouns-correct.txt  nouns.tex  part-2.tex  unterminated-verb-eol.tex  unterminated-verb-nofinal.tex  unterminated-verb-pipe.tex  unterminated-verb.tex  with-srcloc-correct.txt  with-srcloc.tex  words-correct.txt  words.tex
